--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
   "license": "MIT",
   "dependencies": {
     "@material-ui/styles": "^4.9.0",
+    "@types/classnames": "^2.2.9",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@vkontakte/icons": "^1.16.3",
     "@vkontakte/vk-connect": "^1.8.7",
+    "@vkontakte/vkui": "^3.3.6",
+    "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
