--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
     "@vkontakte/icons": "^1.16.3",
-    "@vkontakte/vk-connect": "^1.9.1",
-    "@vkontakte/vkui": "^3.3.7",
+    "@vkontakte/vk-bridge": "^2.0.3",
+    "@vkontakte/vkui": "^3.4.1",
     "classnames": "^2.2.6",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
