--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "@vkontakte/vk-bridge": "^2.1.2",
     "@vkontakte/vkui": "^3.4.1",
     "classnames": "^2.2.6",
+    "customize-cra": "^0.9.1",
     "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
@@ -26,12 +28,12 @@
     "unionize": "^3.0.2"
   },
   "scripts": {
-    "start:http": "cross-env PORT=10889 react-scripts start",
-    "start:https": "cross-env HTTPS=true PORT=10888 react-scripts start",
+    "start:http": "cross-env PORT=10889 react-app-rewired start",
+    "start:https": "cross-env HTTPS=true PORT=10888 react-app-rewired start",
     "tunnel": "ngrok http --region eu 10889",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
