--- a/package.json
+++ b/package.json
@@ -6,8 +6,10 @@
   "author": "Vladislav Kibenko <wolframdeus@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.4",
     "@material-ui/styles": "^4.9.0",
     "@types/classnames": "^2.2.9",
+    "@types/graphql": "^14.5.0",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -15,8 +17,16 @@
     "@vkontakte/icons": "^1.16.3",
     "@vkontakte/vk-bridge": "^2.1.2",
     "@vkontakte/vkui": "^3.4.1",
+    "apollo-cache-inmemory": "^1.6.5",
+    "apollo-client": "^2.6.8",
+    "apollo-link": "^1.2.13",
+    "apollo-link-http": "^1.5.16",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.3",
+    "chalk": "^4.0.0",
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
+    "dotenv": "^8.2.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
@@ -24,14 +34,17 @@
     "react-scripts": "3.3.1",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
+    "subscriptions-transport-ws": "^0.9.16",
     "typescript": "~3.7.2",
     "unionize": "^3.0.2"
   },
   "scripts": {
-    "start:http": "cross-env PORT=10889 react-app-rewired start",
-    "start:https": "cross-env HTTPS=true PORT=10888 react-app-rewired start",
+    "validate:dev": "cross-env DEPLOY_ENV=development.local node prebuild.js",
+    "validate:production": "cross-env DEPLOY_ENV=production node prebuild.js",
+    "start:http": "yarn validate:dev && cross-env PORT=10889 react-app-rewired start",
+    "start:https": "yarn validate:dev && cross-env HTTPS=true PORT=10888 react-app-rewired start",
     "tunnel": "ngrok http --region eu 10889",
-    "build": "react-app-rewired build",
+    "build": "yarn validate:production && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject"
   },
