--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-transition-group": "^4.2.4",
     "@vkontakte/icons": "^1.16.3",
-    "@vkontakte/vk-bridge": "^2.1.2",
+    "@vkontakte/vk-bridge": "^2.1.7",
     "@vkontakte/vkui": "^3.4.1",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -32,6 +33,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "subscriptions-transport-ws": "^0.9.16",
