--- a/package.json
+++ b/package.json
@@ -48,7 +48,9 @@
     "tunnel": "ngrok http --region eu 10889",
     "build": "yarn validate:production && react-app-rewired build",
     "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject"
+    "eject": "react-app-rewired eject",
+    "deploy": "vk-miniapps-deploy",
+    "rollout": "yarn build && yarn deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -68,6 +70,7 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
+    "@vkontakte/vk-miniapps-deploy": "^0.0.17",
     "cross-env": "^7.0.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
