--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-scroll": "^1.5.4",
     "@types/react-transition-group": "^4.2.4",
     "@vkontakte/icons": "^1.16.3",
     "@vkontakte/vk-bridge": "^2.1.7",
@@ -33,6 +34,7 @@
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "react-scripts": "3.3.1",
+    "react-scroll": "^1.7.16",
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
