--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "classnames": "^2.2.6",
     "customize-cra": "^0.9.1",
     "dotenv": "^8.2.0",
+    "eruda": "^2.2.2",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
