--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@material-ui/styles": "^4.9.0",
     "@types/classnames": "^2.2.9",
     "@types/graphql": "^14.5.0",
+    "@types/history": "^4.7.5",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
@@ -30,6 +31,7 @@
     "customize-cra": "^0.9.1",
     "dotenv": "^8.2.0",
     "eruda": "^2.2.2",
+    "history": "^4.10.1",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
