--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
     "unionize": "^3.0.2"
   },
   "scripts": {
-    "validate:dev": "cross-env DEPLOY_ENV=development.local node prebuild.js",
-    "validate:production": "cross-env DEPLOY_ENV=production node prebuild.js",
+    "lint": "eslint src/**",
+    "validate-source": "npm-run-all test lint",
+    "validate:dev": "yarn validate-source && cross-env DEPLOY_ENV=development.local node prebuild.js",
+    "validate:production": "yarn validate-source && cross-env DEPLOY_ENV=production node prebuild.js",
     "start:http": "yarn validate:dev && cross-env PORT=10889 react-app-rewired start",
     "start:https": "yarn validate:dev && cross-env HTTPS=true PORT=10888 react-app-rewired start",
     "tunnel": "ngrok http --region eu 10889",
@@ -55,7 +57,12 @@
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "deploy": "vk-miniapps-deploy",
-    "rollout": "yarn build && yarn deploy"
+    "rollout": "yarn build && yarn deploy",
+    "commit": "git-cz",
+    "release": "standard-version -a",
+    "release:tags": "git push --follow-tags origin master",
+    "release:github": "dotenv -e .conventional.env -- conventional-github-releaser -p eslint",
+    "postrelease": "npm-run-all release:*"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -73,12 +80,38 @@
     ]
   },
   "devDependencies": {
+    "@commitlint/cli": "^8.3.5",
+    "@commitlint/config-conventional": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^2.19.2",
     "@typescript-eslint/parser": "^2.19.2",
     "@vkontakte/vk-miniapps-deploy": "^0.0.17",
+    "commitizen": "^4.1.2",
+    "conventional-github-releaser": "^3.1.3",
     "cross-env": "^7.0.0",
+    "cz-conventional-changelog": "^3.2.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
-    "ngrok": "^3.2.7"
+    "husky": "^4.2.5",
+    "lint-staged": "^10.2.2",
+    "ngrok": "^3.2.7",
+    "npm-run-all": "^4.1.5",
+    "standard-version": "^8.0.0"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "yarn test",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "src/**/*.ts": [
+      "eslint --fix"
+    ]
   }
 }
