--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "conventional-github-releaser": "^3.1.3",
     "cross-env": "^7.0.0",
     "cz-conventional-changelog": "^3.2.0",
+    "dotenv-cli": "^3.1.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.18.3",
     "husky": "^4.2.5",
