--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
   },
   "scripts": {
     "lint": "eslint src/**",
-    "validate-source": "npm-run-all lint",
-    "validate:dev": "yarn validate-source && cross-env DEPLOY_ENV=development.local node prebuild.js",
-    "validate:production": "yarn validate-source && cross-env DEPLOY_ENV=production node prebuild.js",
+    "validate": "npm-run-all lint",
+    "validate:dev": "yarn validate && cross-env DEPLOY_ENV=development.local node prebuild.js",
+    "validate:production": "yarn validate && cross-env DEPLOY_ENV=production node prebuild.js",
     "start:http": "yarn validate:dev && cross-env PORT=10889 react-app-rewired start",
     "start:https": "yarn validate:dev && cross-env HTTPS=true PORT=10888 react-app-rewired start",
     "tunnel": "ngrok http --region eu 10889",
@@ -59,7 +59,7 @@
     "deploy": "vk-miniapps-deploy",
     "rollout": "yarn build && yarn deploy",
     "commit": "git-cz",
-    "prerelease": "yarn validate",
+    "prerelease": "yarn validate-source",
     "release": "standard-version -a",
     "release:tags": "git push --follow-tags origin master",
     "release:github": "dotenv -e .conventional.env -- conventional-github-releaser -p eslint",
