--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/react-scroll": "^1.5.4",
     "@types/react-transition-group": "^4.2.4",
     "@vkontakte/icons": "^1.16.3",
-    "@vkontakte/vk-bridge": "^2.1.7",
+    "@vkontakte/vk-bridge": "^2.2.1",
     "@vkontakte/vkui": "^3.4.1",
     "apollo-cache-inmemory": "^1.6.5",
     "apollo-client": "^2.6.8",
@@ -32,7 +32,7 @@
     "dotenv": "^8.2.0",
     "eruda": "^2.2.2",
     "history": "^4.10.1",
-    "react": "^16.12.0",
+    "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
@@ -43,30 +43,28 @@
     "redux-devtools-extension": "^2.13.8",
     "subscriptions-transport-ws": "^0.9.16",
     "typescript": "~3.8.3",
-    "unionize": "^3.0.2"
+    "unionize": "^3.0.2",
+    "vkma-router": "^1.1.1"
   },
   "scripts": {
-    "lint": "eslint src/**",
-    "validate": "npm-run-all lint",
-    "validate:dev": "yarn validate && cross-env DEPLOY_ENV=development.local node prebuild.js",
-    "validate:production": "yarn validate && cross-env DEPLOY_ENV=production node prebuild.js",
-    "start:http": "yarn validate:dev && cross-env PORT=10889 react-app-rewired start",
-    "start:https": "yarn validate:dev && cross-env HTTPS=true PORT=10888 react-app-rewired start",
+    "check-env:dev": "cross-env DEPLOY_ENV=development.local node prebuild.js",
+    "check-env:prod": "cross-env DEPLOY_ENV=production node prebuild.js",
+    "start:http": "yarn check-env:dev && cross-env PORT=10889 react-app-rewired start",
+    "start:https": "yarn check-env:dev && cross-env HTTPS=true PORT=10888 react-app-rewired start",
     "tunnel": "ngrok http --region eu 10889",
-    "build": "yarn validate:production && react-app-rewired build",
+    "build": "yarn check-env:prod && react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "deploy": "vk-miniapps-deploy",
     "rollout": "yarn build && yarn deploy",
+    "lint": "eslint src/**/*.{ts,tsx}",
     "commit": "git-cz",
+    "validate": "npm-run-all lint",
     "prerelease": "yarn validate",
     "release": "standard-version -a",
     "release:tags": "git push --follow-tags origin master",
     "release:github": "dotenv -e .conventional.env -- conventional-github-releaser -p eslint",
     "postrelease": "npm-run-all release:*"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -106,13 +104,12 @@
   },
   "husky": {
     "hooks": {
-      "pre-push": "yarn test",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "pre-commit": "lint-staged"
     }
   },
   "lint-staged": {
-    "src/**/*.ts": [
+    "src/**/*.{ts,tsx}": [
       "eslint --fix"
     ]
   }
